# ROS-Astar

./: .gitignore  commands_to_run.txt
Video/: info.txt
astarPathfinding/astar/: astar.pro  main.cpp
astarPathfinding/build-astar-Desktop-Debug/: Makefile  astar
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/lib/laser_ortho_projector/: laser_ortho_projector_node
catkin_ws/devel/lib/laser_scan_matcher/: laser_scan_matcher_node
catkin_ws/devel/lib/laser_scan_sparsifier/: laser_scan_sparsifier_node
catkin_ws/devel/lib/laser_scan_splitter/: laser_scan_splitter_node
catkin_ws/devel/lib/ncd_parser/: ncd_parser
catkin_ws/devel/lib/pkgconfig/: laser_ortho_projector.pc  laser_scan_matcher.pc  laser_scan_sparsifier.pc  laser_scan_splitter.pc  ncd_parser.pc  polar_scan_matcher.pc  scan_to_cloud_converter.pc  seminarski_mr.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
catkin_ws/devel/lib/polar_scan_matcher/: psm_node
catkin_ws/devel/lib/scan_to_cloud_converter/: scan_to_cloud_converter_node
catkin_ws/devel/lib/seminarski_mr/: listener  listener1  talker
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_illumination  turtlebot3_marker_server  turtlebot3_obstacle  turtlebot3_pointop_key  turtlebot3_server
catkin_ws/src/seminarski_mr/: CMakeLists.txt
catkin_ws/src/seminarski_mr/include/: astar.hpp
catkin_ws/src/seminarski_mr/src/: listener.cpp  listener1.cpp  talker.cpp
(+28 files in other folders)
